--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<base-layout>
-
-</base-layout>
-<div id="app-loading" class="vh-100 d-flex justify-content-center align-items-center">
-  <div class="rounded-3 bg-white border-1  p-4 d-flex justify-content-center align-items-center">
-    <span class="lead text-muted fw-bold">
-      Loading ...
-    </span>
-  </div>
-</div>
+  <ea-app></ea-app>
 </body>
 </html>
