refactor : add loading spinner todo

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Todos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/images/logo/effectiv-icon-small.png">
 </head>
 <body>
   <ea-app></ea-app>
